--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.3.2
   provider: ^6.1.5+1
   flutter_colorpicker: ^1.1.0
+  font_awesome_flutter: ^10.12.0
+  line_awesome_flutter: ^3.0.1
   
 
 dev_dependencies:
