--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,11 @@ dependencies:
   line_awesome_flutter: ^3.0.1
   audioplayers: ^6.1.0
   vibration: ^2.0.0
+  path_provider: ^2.1.5
+  file_picker: ^8.1.6
+  share_plus: ^10.1.3
   flutter_local_notifications: ^18.0.1
-  android_alarm_manager_plus: ^4.0.3
+  timezone: ^0.10.0
   
 
 dev_dependencies:
